--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.8",
+    "@ionic/react": "^7.1.2",
+    "@popperjs/core": "^2.11.8",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.12.18",
+    "ionicons": "^7.1.2",
+    "jquery": "^3.7.0",
+    "next": "^13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.14.1",
+    "react-toastify": "^9.1.3",
+    "swiper": "^10.0.4"
   }
 }
